<resources>
    <string name="app_name">AudioRecordView</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="align_to_center">Align to center</string>
    <string name="draw_right_to_left">Draw right to left</string>
    <string name="rounded_corners">Rounded corners</string>
    <string name="soft_transition">Soft transition</string>
</resources>
